Fixed button issue on mobile
Button would glue itself to the text

--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ h2 {
   font-size: 35px;
 }
 
-h3 {
-  margin-bottom: 0;
+h3 { 
+  margin: 5px 0;
 }
 
 p {
@@ -58,6 +58,7 @@ header {
 }
 
 .listMenu a {
+  font-size: 18px;
   padding: 15px;
   text-decoration: none;
   color: gray;
@@ -103,17 +104,16 @@ nav {
   margin: 20px 0px;
   justify-content: center;
   flex-wrap: wrap;
+  gap: 25px;  
 }
 
 .cardWhite {
-  align-items: center;
   max-width: 250px;
   background: white;
   box-shadow: 0 0 16px rgba(0, 0, 0,0.1);
   text-align: center;
   border-radius: 5px;
   padding: 25px;
-  margin: 0 20px;
 }
 
 .cardWhite p {
@@ -142,7 +142,6 @@ button.discover {
 }
 
 #aboutMe{
-  gap: 25px;
   background-color: rgb(31, 41, 55);
   color: white;
   padding-bottom: 40px;
